--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -978,7 +978,18 @@
 
 
 
+<script>
+    //===================================== Typewriter Effect =========================
 
+
+new Typewriter('#typewriter', {
+  strings: ['hey', 'Web-developer', 'Electrical-Engineer', 'e-Tutor', 'Author', ''],
+  autoStart: true,
+  loop: true,
+  cursor: "|"
+});
+console.log("Typewriter effect is working!")
+</script>
 
 
     <!-- Core -->
