--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -977,21 +977,6 @@
 
 
 
-
-<script>
-    //===================================== Typewriter Effect =========================
-
-
-new Typewriter('#typewriter', {
-  strings: ['hey', 'Web-developer', 'Electrical-Engineer', 'e-Tutor', 'Author', ''],
-  autoStart: true,
-  loop: true,
-  cursor: "|"
-});
-console.log("Typewriter effect is working!")
-</script>
-
-
     <!-- Core -->
     <script src="static/js/core/jquery.min.js"></script>
     <script src="static/js/core/popper.min.js"></script>
@@ -1002,6 +987,19 @@ console.log("Typewriter effect is working!")
 
     <!--  Typewriter CSS Effect -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+    <script>
+        //===================================== Typewriter Effect =========================
+    
+    
+    new Typewriter('#typewriter', {
+      strings: ['eagfegs', 'Web-developer', 'Electrical-Engineer', 'e-Tutor', 'Author', ''],
+      autoStart: true,
+      loop: true,
+      cursor: "|"
+    });
+    console.log("Typewriter effect is working!")
+    </script>
     
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
