--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -97,23 +97,23 @@
 
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="" target="_blank" class="home__social-icon" id="myLinkedIn">
+                        <a href={{bio.linked_in}} target="_blank" class="home__social-icon" id="myLinkedIn">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
 
-                        <a href="" target="_blank" class="home__social-icon" id="myInstagram">
+                        <a href={{bio.instagram}} target="_blank" class="home__social-icon" id="myInstagram">
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="" target="_blank" class="home__social-icon" id="myGithub">
+                        <a href={{bio.git_hub}} target="_blank" class="home__social-icon" id="myGithub">
                             <i class="uil uil-github-alt"></i>
                         </a>
 
-                        <a href="" target="_blank" class="home__social-icon" id="myFacebook">
+                        <a href={{bio.facebook}} target="_blank" class="home__social-icon" id="myFacebook">
                             <i class="uil uil-facebook-f"></i>
                         </a>
 
-                        <a href="" target="_blank" class="home__social-icon" id="myTwitter">
+                        <a href={{bio.twitter}} target="_blank" class="home__social-icon" id="myTwitter">
                             <i class="uil uil-twitter-alt"></i>
                         </a>
                     </div>
@@ -993,10 +993,10 @@
     
     
     new Typewriter('#typewriter', {
-      strings: ['eagfegs', 'Web-developer', 'Electrical-Engineer', 'e-Tutor', 'Author', ''],
+      strings: ['Omer Gaizinger', 'Python-developer', 'Web-developer', 'Backend-developer', 'Java-developer', ''],
       autoStart: true,
       loop: true,
-      cursor: "|"
+      cursor: ">"
     });
     console.log("Typewriter effect is working!")
     </script>
