--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -347,72 +347,23 @@
                 <div class="blog-slider__wrp swiper-wrapper">
                     
                     <!-- For portfolio item 1 -->
+                    {% for project in projects %}
                     <div class="blog-slider__item swiper-slide">
                         <div class="blog-slider__img">
-                            <img src="https://res.cloudinary.com/bjha/image/upload/v1628002160/portfolio%20images/Twitter_SNS_f3ejqv.png" alt="Twitter type SNS ">
+                            <img src={{ project.photo }} alt="Twitter type SNS ">
                         </div>
 
                         <div class="blog-slider__content">
-                            <span class="blog-slider__code"> July 2021</span>
-                            <div class="blog-slider__title"> Twitter Like SNS </div>
-                            <div class="blog-slider__text"> Designed a Twitter-like social network website for making posts and following users.</div>
+                            <span class="blog-slider__code"> {{ project.date|date:"%B, %Y"}}</span>
+                            <div class="blog-slider__title"> {{ project.title}} </div>
+                            <div class="blog-slider__text"> {{ project.info }}</div>
                             <a href="https://youtu.be/E1X5Q3lgO30" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
                             </a>
                         </div>
                     </div>
-
-                    <!-- For portfolio item 2 -->
-                    <div class="blog-slider__item swiper-slide">
-                        <div class="blog-slider__img">
-                            <img src="https://res.cloudinary.com/bjha/image/upload/v1628002160/portfolio%20images/ecommerce_django_built_rjii3g.png" alt="Portfolio item">
-                        </div>
-
-                        <div class="blog-slider__content">
-                            <span class="blog-slider__code"> December 2020</span>
-                            <div class="blog-slider__title"> E-commerce </div>
-                            <div class="blog-slider__text"> Designed an eBay-like e-commerce auction site that will allow users to post auction listings, place bids on listings, comment on those listings, and add listings to a “watchlist.” </div>
-                            <a href="https://www.youtube.com/watch?v=Zr6VA7Gl0yQ" target="_blank" class="button blog-slider__button button--flex"> 
-                                Demo
-                                <i class="uil uil-play button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- For portfolio item 3 -->
-                    <div class="blog-slider__item swiper-slide">
-                        <div class="blog-slider__img">
-                            <img src="https://res.cloudinary.com/bjha/image/upload/v1628002160/portfolio%20images/Mail_django_built_rxd6jc.png" alt="Portfolio item">
-                        </div>
-
-                        <div class="blog-slider__content">
-                            <span class="blog-slider__code"> October 2020</span>
-                            <div class="blog-slider__title"> MAIL </div>
-                            <div class="blog-slider__text"> Designed a front-end for an email client that makes API calls to send and receive emails.</div>
-                            <a href="https://youtu.be/a6PlEYCYJXw" target="_blank" class="button blog-slider__button button--flex"> 
-                                Demo
-                                <i class="uil uil-play button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- For portfolio item 4 -->
-                    <div class="blog-slider__item swiper-slide">
-                        <div class="blog-slider__img">
-                            <img src="https://res.cloudinary.com/bjha/image/upload/v1628002160/portfolio%20images/wikipedia_design_django_v28dmu.png" alt="Portfolio item">
-                        </div>
-
-                        <div class="blog-slider__content">
-                            <span class="blog-slider__code"> September 2020</span>
-                            <div class="blog-slider__title"> WiKi </div>
-                            <div class="blog-slider__text"> Design a Wikipedia-like online encyclopedia.</div>
-                            <a href="https://www.youtube.com/watch?v=9NarL9NsRr8" target="_blank" class="button blog-slider__button button--flex"> 
-                                Demo
-                                <i class="uil uil-play button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
+                    {% endfor %}
                     
                     <div class="blog-slider__pagination"></div>
                 </div>
@@ -493,7 +444,7 @@
 
                 <div>
                     <h1 class="footer__title"> {{ bio.f_name }} </h1>
-                    <span class="footer__subtitle"> Electrical Engineer and Developer</span>
+                    <span class="footer__subtitle"> {{ bio.title }}</span>
                 </div>
 
                 <ul class="footer__links">
