--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -169,17 +169,17 @@
 
                 <div class="about__info">
                     <div>
-                        <span class="about__info-title"> {{ bio.exp_years }}+ </span>
+                        <span class="about__info-title"> {{ bio.exp_years|num_string }}+ </span>
                         <span class="about__info-name"> Years <br> Experience </span>
                     </div>
 
                     <div>
-                        <span class="about__info-title"> {{ bio.num_projects }}+ </span>
+                        <span class="about__info-title"> {{ bio.num_projects|num_string }}+ </span>
                         <span class="about__info-name"> Completed <br> Projects </span>
                     </div>
 
                     <div>
-                        <span class="about__info-title"> {{ bio.num_works }}+ </span>
+                        <span class="about__info-title"> {{ bio.num_works|num_string }}+ </span>
                         <span class="about__info-name"> Companies <br> Worked </span>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <div id="education_timeline">
                             <div class="container py-2">
 
-                                <!-- Timeline item 1 -->
+                                <!-- Timeline items -->
                                 {% for education in educations %}
                                 <div class="row">
                                     <!-- Timeline design -->
@@ -288,7 +288,7 @@
 
                         <div id="expreience_timeline">
                             <div class="container py-2">
-                                <!-- Timeline item 1 -->
+                                <!-- Timeline items -->
                                 {% for experience in experiences %}
                                 <div class="row">
                                     <!-- Timeline design -->
@@ -346,7 +346,7 @@
             <div class="blog-slider">
                 <div class="blog-slider__wrp swiper-wrapper">
                     
-                    <!-- For portfolio item 1 -->
+                    <!-- For portfolio items -->
                     {% for project in projects %}
                     <div class="blog-slider__item swiper-slide">
                         <div class="blog-slider__img">
@@ -357,8 +357,8 @@
                             <span class="blog-slider__code"> {{ project.date|date:"%B, %Y"}}</span>
                             <div class="blog-slider__title"> {{ project.title}} </div>
                             <div class="blog-slider__text"> {{ project.info }}</div>
-                            <a href="https://youtu.be/E1X5Q3lgO30" target="_blank" class="button blog-slider__button button--flex"> 
-                                Demo
+                            <a href={{ project.link }} target="_blank" class="button blog-slider__button button--flex"> 
+                                {{ project.action }}
                                 <i class="uil uil-play button__icon"></i>
                             </a>
                         </div>
@@ -462,25 +462,39 @@
                 </ul>
 
                 <div class="footer__socials">
+                    {% if bio.linked_in != '' %}
                     <a href="" target="_blank" class="footer__social" id="myLinkedIn">
                         <i class="uil uil-linkedin-alt"></i>
                     </a>
+                    {% endif %}
+
+                    {% if bio.instagram != '' %}
 
                     <a href="" target="_blank" class="footer__social" id="myInstagram">
                         <i class="uil uil-instagram"></i>
                     </a>
+                    {% endif %}
+
+                    {% if bio.git_hub != '' %}
 
                     <a href="" target="_blank" class="footer__social" id="myGithub">
                         <i class="uil uil-github-alt"></i>
                     </a>
+                    {% endif %}
+
+                    {% if bio.facebook != '' %}
 
                     <a href="" target="_blank" class="footer__social" id="myFacebook">
                         <i class="uil uil-facebook-f"></i>
                     </a>
+                    {% endif %}
+
+                    {% if bio.twitter != '' %}
 
                     <a href="" target="_blank" class="footer__social" id="myTwitter">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
+                    {% endif %}
                 </div>
             </div>
 
@@ -515,7 +529,7 @@
       strings: ['Omer Gaizinger', 'Python-developer', 'Web-developer', 'Backend-developer', 'Java-developer', ''],
       autoStart: true,
       loop: true,
-      cursor: ">"
+      cursor: "|"
     });
     console.log("Typewriter effect is working!")
     </script>
