--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -410,7 +410,8 @@
                 <div class="col-lg-6 pl-lg-4 mt-lg-0 mt-6 contact-form" id="message-me">
                     <h2 class="contact__title"> Interested to work together? - <span> Let's talk </span></h2>
 
-                    <form method="POST" class="cf">
+                    <form method="POST" name="message" class="cf">
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-lg-6">
                                 <input type="text" name="message-name" class="form-control form__color mb-30 cf" placeholder="Your Name">
