--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -509,7 +509,9 @@
         <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
 
-
+    <script>
+        alert('{{ message }}');
+    </script>
 
     <!-- Core -->
     <script src="static/js/core/jquery.min.js"></script>
