--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -510,7 +510,9 @@
     </a>
 
     <script>
-        alert('{{ message }}');
+        if('{{ message }}' !== ''){
+            alert('{{ message }}');
+        }
     </script>
 
     <!-- Core -->
