--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -510,9 +510,11 @@
     </a>
 
     <script>
+        window.onload = function(){
         if('{{ message }}' !== ''){
             alert('{{ message }}');
         }
+    }
     </script>
 
     <!-- Core -->
