--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -354,7 +354,7 @@
                         </div>
 
                         <div class="blog-slider__content">
-                            <span class="blog-slider__code"> {{ project.date|date:"%B, %Y"}}</span>
+                            <span class="blog-slider__code"> {{ project.date|date:"F, Y"}}</span>
                             <div class="blog-slider__title"> {{ project.title}} </div>
                             <div class="blog-slider__text"> {{ project.info }}</div>
                             <a href={{ project.link }} target="_blank" class="button blog-slider__button button--flex"> 
