changed title html

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -341,7 +341,7 @@
     <!-- ------------- PORTFOLIO -------------------->
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
-            <span class="section__subtitle"> My most recent works </span>
+            <span class="section__subtitle"> A Few Projects </span>
 
             <div class="blog-slider">
                 <div class="blog-slider__wrp swiper-wrapper">
