--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -228,7 +228,7 @@
             </div>
         </section>
     <!-- ------------- QUALIFICATIONS (Education and Experience) -------------------->
-        <section class="qualification section" id="qualification">
+        <section class="qualification section" id="qualifications">
             <h2 class="section__title"> Qualification </h2>
             <span class="section__subtitle"> My persoanl Journey </span>
 
@@ -332,11 +332,11 @@
                                             <div class="card-body">
                                                 <div class="task">
                                                     <div class="abstract">
-                                                        <h3 class="qualification__title"> {{ education.title }} </h3>
-                                                        <p class="qualification__subtitle"> {{ education.sub_title }} </p>
+                                                        <h3 class="qualification__title"> {{ experience.title }} </h3>
+                                                        <p class="qualification__subtitle"> {{ experience.sub_title }} </p>
                                                     </div>
                                                     <div class="details">
-                                                        <p class="qualification__subtitle"> {{ education.info }} </p>
+                                                        <p class="qualification__subtitle"> {{ experience.info }} </p>
                                                     </div>
                                                 </div>
                                             </div>
