--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -837,6 +837,21 @@ img{
   border-style: var(--border-style);
   border-color: var(--border-color); 
 }
+.edu-slider {
+	width: 95%;
+	position: relative;
+	max-width: 800px;
+	margin: auto;
+	background: #fff;
+	box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+	padding: 25px;
+	border-radius: 25px;
+	height: fit-content;
+	transition: all 0.3s;
+  background-color: var(--background-body-color);
+  border-style: var(--border-style);
+  border-color: var(--border-color); 
+}
   @media screen and (max-width: 992px) {
 	.blog-slider {
 	  max-width: 680px;
