changed educagtions timeline

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -355,7 +355,7 @@
                                             <h5>
                                                 <span class="badge qualification__calendar">
                                                     <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
-                                                    {{education.year3|date:"Y"}}asfasfa
+                                                    {{education.year3|date:"Y"}}
                                                 </span>
                                             </h5>
     
