changed educagtions timeline

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -277,7 +277,7 @@
                                                         <div class="abstract">
                                                             <div class="qualification__head">
                                                             <h3 class="qualification__title"> {{ education.title1 }} </h3>
-                                                            {% if education.link != '' %}
+                                                            {% if education.link1 != '' %}
                                                             <a class="link_icon" href={{education.link1 }} target="_blank">
                                                                 <i class="uil uil-file-alt"></i>
                                                             </a>
@@ -325,7 +325,7 @@
                                                         <div class="abstract">
                                                             <div class="qualification__head">
                                                             <h3 class="qualification__title"> {{ education.title2 }} </h3>
-                                                            {% if education.link != '' %}
+                                                            {% if education.link2 != '' %}
                                                             <a class="link_icon" href={{education.link2 }} target="_blank">
                                                                 <i class="uil uil-file-alt"></i>
                                                             </a>
@@ -373,7 +373,7 @@
                                                         <div class="abstract">
                                                             <div class="qualification__head">
                                                             <h3 class="qualification__title"> {{ education.title3 }} </h3>
-                                                            {% if education.link != '' %}
+                                                            {% if education.link3 != '' %}
                                                             <a class="link_icon" href={{education.link3 }} target="_blank">
                                                                 <i class="uil uil-file-alt"></i>
                                                             </a>
