changed educagtions timeline mobile

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -245,7 +245,7 @@
                                 
                                 {% for education in educations %}
                                 <div class="blog-slider__item swiper-slide">
-                                    <div class="blog-slider__content">
+                                    <div class="edu-slider__content">
                                         {% if education.year1 != '' %}
                                         <div class="row">
                                         <div class="col-auto text-center flex-column d-sm-flex">
