--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -949,6 +949,55 @@ img{
   .blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(15) {
 	transition-delay: 1.7s;
   }
+  .blog-slider__item.swiper-slide-active .edu-slider__content > * {
+    opacity: 1;
+    transform: none;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(1) {
+    transition-delay: 0.3s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(2) {
+    transition-delay: 0.4s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(3) {
+    transition-delay: 0.5s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(4) {
+    transition-delay: 0.6s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(5) {
+    transition-delay: 0.7s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(6) {
+    transition-delay: 0.8s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(7) {
+    transition-delay: 0.9s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(8) {
+    transition-delay: 1s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(9) {
+    transition-delay: 1.1s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(10) {
+    transition-delay: 1.2s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(11) {
+    transition-delay: 1.3s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(12) {
+    transition-delay: 1.4s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(13) {
+    transition-delay: 1.5s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(14) {
+    transition-delay: 1.6s;
+    }
+    .blog-slider__item.swiper-slide-active .edu-slider__content > *:nth-child(15) {
+    transition-delay: 1.7s;
+    }
   .blog-slider__img {
 	width: 300px;
 	flex-shrink: 0;
@@ -1000,7 +1049,7 @@ img{
   }
   @media screen and (max-width: 768px) {
 	.blog-slider__content {
-	  margin-top: 0px;
+	  margin-top: -80px;
 	  text-align: center;
 	  padding: 0 30px;
 	}
@@ -1015,6 +1064,27 @@ img{
 	transform: translateY(25px);
 	transition: all 0.4s;
   }
+  .edu-slider__content {
+    padding-right: 25px;
+    }
+    @media screen and (max-width: 768px) {
+    .edu-slider__content {
+      margin-top: 0px;
+      text-align: center;
+      padding: 0 30px;
+      padding-bottom: 30px;
+    }
+    }
+    @media screen and (max-width: 576px) {
+    .edu-slider__content {
+      padding: 0;
+    }
+    }
+    .edu-slider__content > * {
+    opacity: 0;
+    transform: translateY(25px);
+    transition: all 0.4s;
+    }
   .blog-slider__code {
 	color: var(--text-color-light);
 	margin-bottom: 15px;
