changed educagtions timeline mobile

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -394,7 +394,7 @@
                                 </div>
                                 {% endfor %}
                                 
-                                <div class="blog-slider__pagination"></div>
+                                <div class="edu-slider__pagination"></div>
                             </div>
                         </div>
                     </div>
