--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -1185,6 +1185,66 @@ img{
 	}
   }
 
+  .edu-slider .swiper-container-horizontal > .swiper-pagination-bullets,
+  .edu-slider .swiper-pagination-custom,
+  .edu-slider .swiper-pagination-fraction {
+	bottom: 10px;
+	left: 0;
+	width: 100%;
+  }
+
+  .edu-slider__pagination {
+    position: absolute;
+    z-index: 21;
+    right: 20px;
+    width: 11px !important;
+    text-align: center;
+    left: auto !important;
+    top: 50%;
+    bottom: auto !important;
+    transform: translateY(-50%);
+    }
+    @media screen and (max-width: 768px) {
+    .edu-slider__pagination {
+      transform: translateX(-50%);
+      left: 50% !important;
+      top: -10px;
+      width: 100% !important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    }
+    .edu-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 8px 0;
+    }
+    @media screen and (max-width: 768px) {
+    .edu-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+      margin: 0 5px;
+    }
+    }
+    .edu-slider__pagination .swiper-pagination-bullet {
+    width: 11px;
+    height: 11px;
+    display: block;
+    border-radius: 10px;
+    background: #062744;
+    opacity: 0.2;
+    transition: all 0.3s;
+    }
+    .edu-slider__pagination .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: var(--first-color-alt);
+    height: 30px;
+    box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+    }
+    @media screen and (max-width: 768px) {
+    .edu-slider__pagination .swiper-pagination-bullet-active {
+      height: 11px;
+      width: 30px;
+    }
+    }
+
   /* ===================== CONTACT SECTION ================== */
 
   .contact_mail{
