--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -405,61 +405,163 @@
                             <i class="uil uil-briefcase-alt qualification__icon"></i> Experience
                         </div>
 
-                        <div id="expreience_timeline">
-                            <div class="container py-2">
-                                <!-- Timeline items -->
+                        <div class="edu-slider">
+                            <div class="blog-slider__wrp swiper-wrapper">
+                                
                                 {% for experience in experiences %}
-                                <div class="row">
-                                    <!-- Timeline design -->
-                                    <div class="col-auto text-center flex-column d-sm-flex">
-                                        <div class="row h-50 qualification__journey">
-                                            <div class="col">
-                                                <span class="qualification__line"></span>
+                                <div class="blog-slider__item swiper-slide">
+                                    <div class="edu-slider__content">
+                                        {% if experience.year1 != '' %}
+                                        <div class="row">
+                                        <div class="col-auto text-center flex-column d-sm-flex">
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
                                             </div>
-                                            <div class="col">&nbsp;</div>
-                                        </div>
-
-                                        <h5>
-                                            <span class="badge qualification__calendar">
-                                                <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
-                                                {{experience.year|date:"Y"}}
-                                            </span>
-                                        </h5>
-
-                                        <div class="row h-50 qualification__journey">
-                                            <div class="col">
-                                                <span class="qualification__line"></span>
+    
+                                            <h5>
+                                                <span class="badge qualification__calendar">
+                                                    <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                                    {{experience.year1|date:"Y"}}
+                                                </span>
+                                            </h5>
+    
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
                                             </div>
-                                            <div class="col">&nbsp;</div>
                                         </div>
-                                    </div>
-                                    <!-- Timeline content Events -->
-                                    <div class="col py-2">
-                                        <div class="card education-card transparent_card mirror-face shadow2">
-                                            <div class="card-body">
-                                                <div class="task">
-                                                    <div class="abstract">
-                                                        <div class="qualification__head">
-                                                        <h3 class="qualification__title"> {{ experience.title }} </h3>
-                                                        {% if experience.link != '' %}
-                                                        <a class="link_icon" href={{experience.link}} target="_blank">
-                                                            <i class="uil uil-file-alt"></i>
-                                                        </a>
-                                                        {% endif %}
-                                                    </div>
-                                                        <p class="qualification__subtitle"> {{ experience.sub_title }} </p>
-                                                    </div>
-                                                    <div class="details">
-                                                        <p class="qualification__subtitle"> {{ experience.info }} </p>
+                                        <div class="col py-2">
+                                            <div class="card education-card transparent_card mirror-face shadow2">
+                                                <div class="card-body">
+                                                    <div class="task">
+                                                        <div class="abstract">
+                                                            <div class="qualification__head">
+                                                            <h3 class="qualification__title"> {{ experience.title1 }} </h3>
+                                                            {% if experience.link1 != '' %}
+                                                            <a class="link_icon" href={{experience.link1 }} target="_blank">
+                                                                <i class="uil uil-file-alt"></i>
+                                                            </a>
+                                                            {% endif %}
+                                                        </div>
+                                                            <p class="qualification__subtitle"> {{ experience.sub_title1 }} </p>
+                                                        </div>
+                                                        <div class="details">
+                                                            <p class="qualification__subtitle"> {{ experience.info1 }} </p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+                                    {% endif %}
+                                    {% if experience.year2 != '' %}
+                                    <div class="row">
+                                        <div class="col-auto text-center flex-column d-sm-flex">
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
+                                            </div>
+    
+                                            <h5>
+                                                <span class="badge qualification__calendar">
+                                                    <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                                    {{experience.year2|date:"Y"}}
+                                                </span>
+                                            </h5>
+    
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
+                                            </div>
+                                        </div>
+                                        <div class="col py-2">
+                                            <div class="card education-card transparent_card mirror-face shadow2">
+                                                <div class="card-body">
+                                                    <div class="task">
+                                                        <div class="abstract">
+                                                            <div class="qualification__head">
+                                                            <h3 class="qualification__title"> {{ experience.title2 }} </h3>
+                                                            {% if experience.link2 != '' %}
+                                                            <a class="link_icon" href={{experience.link2 }} target="_blank">
+                                                                <i class="uil uil-file-alt"></i>
+                                                            </a>
+                                                            {% endif %}
+                                                        </div>
+                                                            <p class="qualification__subtitle"> {{ experience.sub_title2 }} </p>
+                                                        </div>
+                                                        <div class="details">
+                                                            <p class="qualification__subtitle"> {{ experience.info2 }} </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endif %}
+                                    {% if experience.year3 != '' %}
+                                    <div class="row">
+                                        <div class="col-auto text-center flex-column d-sm-flex">
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
+                                            </div>
+    
+                                            <h5>
+                                                <span class="badge qualification__calendar">
+                                                    <i class="uil uil-calendar-alt qualification__calendar-icon"></i>
+                                                    {{experience.year3|date:"Y"}}
+                                                </span>
+                                            </h5>
+    
+                                            <div class="row h-50 qualification__journey">
+                                                <div class="col">
+                                                    <span class="qualification__line"></span>
+                                                </div>
+                                                <div class="col">&nbsp;</div>
+                                            </div>
+                                        </div>
+                                        <div class="col py-2">
+                                            <div class="card education-card transparent_card mirror-face shadow2">
+                                                <div class="card-body">
+                                                    <div class="task">
+                                                        <div class="abstract">
+                                                            <div class="qualification__head">
+                                                            <h3 class="qualification__title"> {{ experience.title3 }} </h3>
+                                                            {% if experience.link3 != '' %}
+                                                            <a class="link_icon" href={{experience.link3 }} target="_blank">
+                                                                <i class="uil uil-file-alt"></i>
+                                                            </a>
+                                                            {% endif %}
+                                                        </div>
+                                                            <p class="qualification__subtitle"> {{ experience.sub_title3 }} </p>
+                                                        </div>
+                                                        <div class="details">
+                                                            <p class="qualification__subtitle"> {{ experience.info3 }} </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endif %}
+                                    </div>
                                 </div>
                                 {% endfor %}
+                                
+                                <div class="edu-slider__pagination"></div>
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </section>
