added fav icon to db

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -24,6 +24,8 @@
 
     <!-- Personal  Styling -->
     <link rel="stylesheet" href="static/css/style.css">
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     
     <title>{{bio.f_name}} {{bio.l_name}}</title>
   </head>
