fav icon implementation

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -25,7 +25,7 @@
     <!-- Personal  Styling -->
     <link rel="stylesheet" href="static/css/style.css">
 
-    {% if bio.fav_icon != ""}
+    {% if bio.fav_icon != "" %}
     <link rel="icon" type="image/x-icon" href={{ bio.fav_icon }}>
     {% endif %}
     
